--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ a {
 }
 
 a:hover {
-    color: #e74c3c !important;
+    color: #e7b13c !important;
 }
 
 img {
@@ -35,10 +35,12 @@ img {
     top: 0;
     height: auto;
     min-height: 750px;
+    min-width: 500px;
+    background-attachment: fixed;
     margin: 0;
     padding-bottom: 70px;
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(50, 58, 69, 0.9)));
-    background-image: linear-gradient(180deg, rgba(50, 58, 69, 0.55), rgba(50, 58, 69, 0.74)), url(images/partizanske.jpg);
+    background-image: linear-gradient(180deg, rgba(50, 58, 69, 0.55), rgba(50, 58, 69, 0.74)), url(images/s-taxi-picture-new.jpg);
     flex-direction: column;
     background-position: 0 0, 100% 50%;
     background-size: auto, cover;
@@ -75,7 +77,7 @@ img {
     display: block;
     text-decoration: none;
     font-size: 2.2rem;
-    color: white;
+    color: #e8c449;
 }
 
 .navbar-toggler span {
