mobile view fix

--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ body {
     background-color: #323a45;
 }
 
+body, html {
+    overflow-x: hidden;
+}
+
 a {
     color: #b1b4bd !important;
     font-weight: 500 !important;
@@ -28,6 +32,12 @@ img {
     width: 100%;
 }
 
+/* Ensure elements are sized correctly */
+.container-fluid, .row, .col-md-4, .text-right, .text-right-right, .tele {
+    /*max-width: 100%;*/
+    box-sizing: border-box;
+}
+
 .header-background {
     position: static;
     display: block;
@@ -35,36 +45,30 @@ img {
     top: 0;
     height: auto;
     min-height: 750px;
-    min-width: 500px;
+    /*min-width: 500px;*/
     background-attachment: fixed;
     margin: 0;
     padding-bottom: 70px;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(50, 58, 69, 0.9)));
-    background-image: linear-gradient(180deg, rgba(50, 58, 69, 0.55), rgba(50, 58, 69, 0.74)), url(images/s-taxi-picture-new.jpg);
+    /*background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(50, 58, 69, 0.9)));*/
+    background-image: linear-gradient(180deg, rgba(50, 58, 69, 0.4), rgba(50, 58, 69, 0.6)), url(images/s-taxi-picture-new.jpg);
     flex-direction: column;
     background-position: 0 0, 100% 50%;
     background-size: auto, cover;
-    white-space: normal;
-    object-fit: fill;
-    -o-object-fit: fill;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
+    /*white-space: normal;*/
+    /*object-fit: fill;*/
+    /*-o-object-fit: fill;*/
+    /*-webkit-box-orient: vertical;*/
+    /*-webkit-box-direction: normal;*/
+    /*-webkit-flex-direction: column;*/
+    /*-ms-flex-direction: column;*/
 }
 
 .sticky-nav {
     position: sticky;
-    position: -webkit-sticky;
     top: 0;
     padding: 20px;
     z-index: 1;
-    -webkit-align-self: auto;
-    align-self: auto;
-    -webkit-box-ordinal-group: 1;
-    -ms-flex-order: 0;
-    order: 0;
-    background-color: rgba(12, 32, 59, 0.5) !important;
+    background-color: rgba(12, 32, 59, 0.8);
 }
 
 .navbar-brand {
@@ -80,27 +84,42 @@ img {
     color: #e8c449;
 }
 
+.navbar-toggler {
+    border-color: transparent;
+}
+
+.navbar-collapse {
+    text-align: center;
+    width: 100%;
+
+}
+
+.navbar-toggler-icon {
+    background-color: white;
+}
+
 .navbar-toggler span {
     display: block;
     width: 22px;
     height: 2px;
     border: 1px;
+    margin: 4px;
     background: white;
 }
 
-.navbar-toggler span + span {
-    margin-top: 4px;
-    width: 22px;
-}
+/*.navbar-toggler span + span {*/
+/*    margin-top: 4px;*/
+/*    width: 22px;*/
+/*}*/
 
-.navbar-toggler span + span + span {
-    width: 22px;
-}
+/*.navbar-toggler span + span + span {*/
+/*    width: 22px;*/
+/*}*/
 
 .navbar-expand-lg .navbar-nav .nav-link {
     padding: 1.4rem 1rem;
     font-size: 1.2rem;
-    position: relative;
+    /*position: relative;*/
 }
 
 .navbar-expand-lg .navbar-nav .nav-link.active {
@@ -108,14 +127,14 @@ img {
 }
 
 .heading {
-    font-size: 3rem !important;
+    font-size: 3rem;
     font-weight: bold;
     line-height: 1.4;
     text-align: center;
     color: white;
     margin-top: 180px;
     margin-bottom: 8px;
-    min-height: 100px;
+    /*min-height: 100px;*/
 }
 
 footer {
@@ -124,8 +143,8 @@ footer {
 
 .image-right {
     min-height: 250px;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(12, 32, 59, 0.9)));
-    background-image: linear-gradient(180deg, rgba(12, 32, 59, 0.55), rgba(12, 32, 59, 0.74)), url(images/Taxi.jpg);
+    /*background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(12, 32, 59, 0.9)));*/
+    background-image: linear-gradient(180deg, rgba(12, 32, 59, 0.4), rgba(12, 32, 59, 0.6)), url(images/Taxi.jpg);
     background-position: center;
     background-size: auto, cover;
     background-attachment: scroll, scroll;
@@ -134,52 +153,35 @@ footer {
 
 .image-left {
     min-height: 250px;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(12, 32, 59, 0.9)));
-    background-image: linear-gradient(180deg, rgba(12, 32, 59, 0.55), rgba(12, 32, 59, 0.74)), url(images/taxxxi.jpg);
+    /*background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(12, 32, 59, 0.9)));*/
+    background-image: linear-gradient(180deg, rgba(12, 32, 59, 0.4), rgba(12, 32, 59, 0.6)), url(images/taxxxi.jpg);
+    background-position: center;
+    background-size: auto, cover;
+    background-attachment: scroll;
+    -o-object-fit: cover;
+}
+
+.contact-us {
+    min-height: 250px;
+    /*background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(12, 32, 59, 0.9)));*/
+    background-image: linear-gradient(180deg, rgba(12, 32, 59, 0.4), rgba(12, 32, 59, 0.6)), url(images/contact-us.jpg);
     background-position: center;
     background-size: auto, cover;
     background-attachment: scroll, scroll;
     -o-object-fit: cover;
 }
 
-.text-left .section-title {
-    margin-top: 10px;
-    padding: 2rem 2rem 0 2rem;
+.text-left .section-title, .text-right .section-title {
     font-size: 3.5rem;
     color: #b1b4bd;
     font-weight: 500;
+    padding-top: 10px;
 }
 
-.text-left .ceny {
-    padding: 0rem 0rem 2rem 0rem;
+.text-left .ceny, .text-right .sluzby, .text-right-right .sluzby {
     font-size: 1.5rem;
     color: #b1b4bd;
     line-height: 1.4;
-
-}
-
-.text-right .section-title {
-    margin-top: 10px;
-    padding: 2rem 2rem 0 2rem;
-    font-size: 3.5rem;
-    color: #b1b4bd;
-    font-weight: 500;
-}
-
-.text-right .sluzby {
-    padding: 1rem 5rem 1rem 5rem;
-    font-size: 1.5rem;
-    color: #b1b4bd;
-    line-height: 1.4;
-    white-space: nowrap;
-}
-
-.text-right-right .sluzby {
-    padding: 5rem 5rem 1rem 5rem;
-    font-size: 1.5rem;
-    color: #b1b4bd;
-    line-height: 1.4;
-    white-space: nowrap;
 }
 
 .modal-title {
@@ -187,32 +189,26 @@ footer {
 }
 
 .tele {
-    display: flex !important;
-    justify-content: center !important;
-    align-items: center !important;
-    text-decoration: none !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
     font-weight: bold;
     font-size: 3rem;
-    color: white !important;
-    line-height: 1.4 !important;
-    margin-top: 180px !important;
-    margin-bottom: 8px !important;
-    min-height: 100px !important;
-    text-align: center !important;
+    color: white;
+    margin-top: 180px;
+    margin-bottom: 8px;
+    text-align: center;
 }
 
 
 .tele:hover {
-    display: flex !important;
-    justify-content: center !important;
-    align-items: center !important;
-    text-decoration: none !important;
-    color: white !important;
+    color: white;
 }
 
 .modal-header, .modal-body {
     color: black;
-    line-height: 1;
+    /*line-height: 1;*/
 }
 
 h4 {
@@ -222,16 +218,91 @@ h4 {
 
 .space {
     height: 100px;
-    width: 0;
-    display: block;
+    /*width: 0;*/
+    /*display: block;*/
 }
 
-.contact-us {
-    min-height: 250px;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(12, 32, 59, 0.9)));
-    background-image: linear-gradient(180deg, rgba(12, 32, 59, 0.55), rgba(12, 32, 59, 0.74)), url(images/contact-us.jpg);
-    background-position: center;
-    background-size: auto, cover;
-    background-attachment: scroll, scroll;
-    -o-object-fit: cover;
+ol, ul {
+    padding-left: 2rem;
+    list-style-type: none;
+}
+
+
+@media (max-width: 768px) {
+    .container, .container-md, .container-sm {
+        max-width: 100%;
+        text-align: center;
+    }
+    .navbar .navbar-brand {
+        font-size: 1.8rem;
+    }
+    .text-left .section-title, .text-right .section-title {
+        font-size: 2.5rem;
+    }
+    .tele {
+        font-size: 2.5rem;
+        margin-top: 100px;
+    }
+}
+
+@media (max-width: 576px) {
+    .container, .container-sm {
+        max-width: 100%;
+        text-align: center;
+    }
+    .navbar .navbar-brand {
+        font-size: 1.5rem;
+    }
+    .text-left .section-title, .text-right .section-title {
+        font-size: 2rem;
+    }
+    .tele {
+        font-size: 2rem;
+        margin-top: 80px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        width: 100%;
+    }
+}
+
+@media (max-width: 374px) {
+    .navbar .navbar-brand {
+        font-size: 1.2rem;
+    }
+    .tele {
+        font-size: 1.8rem;
+        margin-top: 60px;
+        padding: 0 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        width: 100%;
+    }
+}
+
+/* Set initial ul styling */
+.sluzby ul {
+    list-style-type: none;
+    padding-left: 0;
+    margin: 0;
+    text-align: center;
+}
+
+/* Styling for nested ul lists */
+.sluzby ul ul {
+    padding-left: 0;
+    margin-top: 5px;
+    text-align: center;
+}
+
+.sluzby ul li {
+    padding: 5px 0;
+}
+
+/* Add some spacing between icons and text */
+.sluzby i {
+    margin-right: 5px;
 }
